# vehiclecounting-testing

./: CMakeLists.txt  README.md  main.cpp
